Comiteando el primer cambio (en index.html)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 
     <main>
+      <h1>HOLA PRUEBAS DE GIT</h1>
    
       <div class="video">
           <video autoplay loop muted playsinline>
