--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
     <main>
       <h1>HOLA PRUEBAS DE GIT</h1>
+      <h2>Irene y Adalberto estamos haciendo cambios para que se aprecie el git status</h2>
    
       <div class="video">
           <video autoplay loop muted playsinline>
