edicion del footer desde rama-Irene-Adalberto

--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
 
 
     <main>
-      <h1>HOLA PRUEBAS DE GIT</h1>
-      <h2>Irene y Adalberto estamos haciendo cambios para que se aprecie el git status</h2>
-   
       <div class="video">
           <video autoplay loop muted playsinline>
             <source src="img/vidFondo.mp4" type="video/mp4">
@@ -238,7 +235,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>&copy; 2024 Pure Essence. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Explicación de Git realizada por Irene y Ada. Todos los derechos reservados.</p>
     </div>
 </footer>
 
